cross compile for raspberry pi!

--- a/audio/BUILD
+++ b/audio/BUILD
@@ -1,5 +1,10 @@
 
 cc_binary(
+   name = "main",
+   srcs = ["main.cc"],
+)
+
+cc_binary(
    name = "list_audio_devices",
    srcs = ["list_audio_devices.cc"],
    deps = ["@portaudio//:portaudio"],
