build raspberry pi docker image

--- a/audio/BUILD
+++ b/audio/BUILD
@@ -1,7 +1,21 @@
+load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")
+
+config_setting(
+    name = "aarch64",
+    values = {
+      "cpu": "aarch64"
+    }
+)
 
 cc_binary(
    name = "main",
    srcs = ["main.cc"],
+)
+
+cc_image(
+    name = "main_image",
+    base = select({":aarch64": "@aarch64_base//image", "//conditions:default": "@cc_image_base//image"}),
+    binary = ":main",
 )
 
 cc_binary(
